<?xml version="1.0"?>
<package format="2">

  <name>ament_boost_process</name>
  <version>1.0.0</version>
  <description>
    wrapper around boost process
  </description>
  <maintainer email="Geoffrey.Viola@asirobots.com">Geoffrey Viola</maintainer>
  <author>Geoffrey Viola</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ament_boost</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
